[css] reduced poster height to avoid overflow
- lifted reset click to .card .image
- use new empty space to show more description

--- a/src/App.css
+++ b/src/App.css
@@ -87,8 +87,13 @@ footer {
   justify-content: center;
 }
 
-.viewer .playing {
+.card .image {
   cursor: pointer;
+}
+
+.card .image img {
+  height: 200px !important;
+  width: auto !important;
 }
 
 .movie {
